Fix alignment

--- a/main.css
+++ b/main.css
@@ -164,15 +164,6 @@ li {
     color: #999;
   }
 
-  .tags li {
-    display: inline-block;
-    font-size: 14px;
-    box-shadow: 0 1px 4px rgba(0, 0, 0, 14);
-    padding: 5px 10px;
-    margin-right: 10px;
-    border-radius: 10px;
-  }
-
   .project-card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 2);
     transition: 0.3s;
@@ -207,10 +198,26 @@ li {
   .project-card__stack {
     margin-top: 50px;
     text-transform: uppercase;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
 
-  .project-card__links {
+  .tags {
+    padding-inline-start: 0;
+  }
+
+  .tags li {
+    display: inline-block;
+    font-size: 14px;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 14);
+    padding: 5px 10px;
+    margin-right: 10px;
+    border-radius: 10px;
+  }
+
+  .project-card__link {
+    display: flex;
     justify-content: end;
+    align-items: end;
   }
 
   .project-card__link img {
